--- a/src/styles/sections/Objective.css
+++ b/src/styles/sections/Objective.css
@@ -349,7 +349,7 @@
   }
 
   #obj-content {
-    padding: 10px 12px;
+    padding: 10px 12px 100px;
     max-height: none;
   }
 
